# src/shared/infra/http/routes/index.ts
@@ -4,6 +4,7 @@ import { specificationsRoutes } from "./specifications.routes";
 import { userRoutes } from "./users.routes";
 import { carsRoutes } from "./cars.routes";
 import { autheticateRoutes } from "./authenticate.routes";
+import { rentalRoutes } from "./rental.routes";
 
 
 const router = Router();
@@ -12,6 +13,7 @@ router.use("/categories", categoriesRoutes);
 router.use("/specifications", specificationsRoutes);
 router.use("/users", userRoutes);
 router.use("/cars", carsRoutes);
+router.use("/rentals", rentalRoutes);
 router.use(autheticateRoutes);
 
 
