# src/shared/infra/http/routes/rental.routes.ts
@@ -1,0 +1,13 @@
+import { CreateRentalController } from "@modules/rentals/useCases/createRental/CreateRentalController";
+import { Router } from "express";
+import { ensureAuthenticated } from "../middlewares/ensureAuthenticated";
+
+
+const rentalRoutes = Router();
+
+const createRentalController = new CreateRentalController();
+
+rentalRoutes.post("/", ensureAuthenticated, createRentalController.handle);
+
+
+export {rentalRoutes};
